@@ -1,3 +1,7 @@
+2007-04-27  Matthias Clasen <mclasen@redhat.com>
+
+	* glib/gstrfuncs.c: small coding style cleanups.
+
 2007-04-27  Chris Wilson  <chris@chris-wilson.co.uk>
 
 	* glib/gregex.h: Remove trailing comma at end of enumerator list.
